# squiddy

./: Cargo.toml
src/: main.rs
