[package]
name = "squiddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
indoc = "2.0.5"
itertools = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
